# configs

./: .bash_aliases  .gitconfig  .gitignore  .gitmodules  .inputrc  .ripgreprc  BOOTSTRAP.md  COMPLETE_INSTALLATION_LIST.md  COMPLETE_PACKAGE_LIST.md  FINAL_COMPLETE_LIST.md  INSTALL.md  INSTALLATION_MANIFEST.md  README.md  bashrc  bootstrap.sh  config.h  install-everything.sh  setup.sh
alacritty/: alacritty.toml
docs/: display-setup.md  tmux-session-persistence-guide.md
k9s/: config.yaml
k9s/skins/: github-dark.yaml
lazydocker/: config.yml
nvim/lua/plugins/: astroui.lua
oh-my-posh/: dark-colorblind.omp.json
st/: .gitignore  Makefile  README.md  config.def.h  x.c
tablet/: configure_tablet_pressure.sh  install_tablet_tools.sh
taskquest/: Cargo.toml  README.md  install.sh
taskquest/src/: app.rs  db.rs  main.rs  models.rs  scoring.rs  ui.rs
tmux/: .tmux.conf  .tmux.conf.bak  keyboard-shortcuts.md  tmux.conf
vs-code/: extensions.txt  keybindings.json  settings.json
whisper-voice-to-text/: README.md  install.sh  whisper-hotkey.py
